<resources>
    <string name="app_name">GoodPosture</string>
    <string name="title_home">首頁</string>
    <string name="title_shopping">購物</string>
    <string name="title_forum">討論</string>
    <string name="title_my">我的</string>
    <string name="title_commodity">商品</string>
    <string name="title_order">訂單</string>
    <string name="title_setting">設定</string>
    <string name="title_exercise_record">運動熱量紀錄</string>
    <string name="title_eat_record">飲食熱量紀錄</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textAppName">美好人身</string>
    <string name="text_welcomeWords">歡迎使用美好人身， \n 這將有助於你改善體態。</string>
    <string name="text_register">註冊</string>
    <string name="text_login">登入</string>
    <string name="text_registerSuccess">註冊成功!</string>
    <string name="title_activity_pre">PreActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_bodyInfo">請輸入你的身體資訊</string>
    <string name="text_male">男</string>
    <string name="text_female">女</string>
    <string name="text_gender">性別</string>
    <string name="text_age">年齡</string>
    <string name="text_height">身高</string>
    <string name="text_weight">體重</string>
    <string name="text_submit">送出</string>
    <string name="text_modifyBodyInfo">修改身體資訊</string>
    <string name="text_currentBodyStatus">你目前的體態為 : </string>
    <string name="text_currentBMI">你目前的 BMI 為 : </string>
    <string name="text_BRI">一天的基礎代謝為 : </string>
    <string name="text_notMember">還不是會員 ?</string>
    <string name="text_create_account">註冊新帳號</string>
    <string name="text_buyNow">即刻購買</string>
    <string name="text_buyWords">協助您購買所需食品及器材</string>
    <string name="text_discussNow">立即討論</string>
    <string name="text_discussWords">開始和大家熱絡地討論</string>
    <string name="text_modifyBodyInfoWords">請修改你的身體資訊</string>
    <string name="text_back">返回</string>
    <string name="text_iKnow">我知道了</string>
    <string name="textImageDownloadFail">Image download Failed</string>

    <string-array name="exercise_record_type">
        <item>跑步</item>
        <item>跳繩</item>
        <item>游泳</item>
        <item>羽球</item>
    </string-array>
    <string-array name="eat_record_type">
        <item>白飯</item>
        <item>雞胸肉</item>
        <item>水煮青菜</item>
    </string-array>
    <string-array name="record_time">
        <item>0:00</item>
        <item>1:00</item>
        <item>2:00</item>
        <item>3:00</item>
        <item>4:00</item>
        <item>5:00</item>
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
</resources>